<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="128dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:text="@string/save_settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/imageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:text="@string/photoLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/studentImage"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/take_photo_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentImage" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="200dp"
        android:layout_height="333dp"
        android:layout_marginStart="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/studentImage"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lightLabel"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:text="@string/illuminanceLabel" />

        <TextView
            android:id="@+id/lightText"
            android:layout_width="155dp"
            android:layout_height="27dp" />

        <ListView
            android:id="@+id/sensorList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>